feat: added pagination support for ride list
