# src/routes/rides/list/handler.js
@@ -1,8 +1,17 @@
 module.exports = async (req, res, next) => {
   try {
-    const rides = await req.app.locals.services.rides.getList(req.body);
+    const rides = await req.app.locals.services.rides.getList(
+      req.query.offset,
+      req.query.limit,
+    );
 
-    res.status(200).json(rides);
+    res.status(200).json({
+      paginationMeta: {
+        offset: req.query.offset,
+        limit: req.query.limit,
+      },
+      data: rides,
+    });
   } catch (error) {
     next(error);
   }
